edited foldername and added CompileDaemon to replace vite
